@@ -1,5 +1,9 @@
 2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/layout.R (layout.reingold.tilford)
+	* interfaces/R/src/rinterface.c (R_igraph_layout_reingold_tilford) :
+	circular argument added	
+
 	* interfaces/R/src/rinterface.c (R_igraph_attribute_add_vertices)
 	(R_igraph_attribute_add_edges) : bug corrected
 
